--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
       -webkit-backface-visibility: visible;
       -moz-backface-visibility: visible;
     }
+/*
+    .shape {
+      -webkit-animation: spin 8s infinite linear;
+    }
+*/
     @-webkit-keyframes spin {
       from { -webkit-transform: rotateX(0); }
       to   { -webkit-transform: rotateX(-360deg); }
