--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"/>
-  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
   <title>Slots</title>
   <style type="text/css" media="screen">
     .shape.backfaces .plane {
@@ -12,11 +12,11 @@
     .shape {
       -webkit-animation: spin 8s infinite linear;
     }
-*/
     @-webkit-keyframes spin {
       from { -webkit-transform: rotateX(0); }
       to   { -webkit-transform: rotateX(-360deg); }
     }
+*/
   </style>
 </head>
 <body>
